# storage/api-docs/api-docs.json
@@ -691,6 +691,46 @@
                 ]
             }
         },
+        "/api/whatsap{id}": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "whatsap",
+                "operationId": "1e94daeab6618b5108b9ffb3f39dc850",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la whatsap",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Opération réussie",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "users": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/User"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/login": {
             "post": {
                 "tags": [
@@ -861,46 +901,6 @@
                         "bearerAuth": []
                     }
                 ]
-            }
-        },
-        "/api/whatsap{id}": {
-            "post": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "whatsap",
-                "operationId": "f39c86895104a89f3c36bd5ef2d3de5f",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID de la whatsap",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Opération réussie",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "users": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/components/schemas/User"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
             }
         },
         "/api/blocs": {
@@ -1401,6 +1401,91 @@
                 ]
             }
         },
+        "/api/categorieSupprimer{id}": {
+            "delete": {
+                "tags": [
+                    "Catégories"
+                ],
+                "summary": "Supprimer une catégorie spécifique",
+                "operationId": "aa95efb4c735d7bc186cae3784631e21",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la catégorie à supprimer",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Supprimé avec succès",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Non autorisé"
+                    },
+                    "404": {
+                        "description": "Catégorie non trouvée"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/listeCategorieSupprimer": {
+            "get": {
+                "tags": [
+                    "Catégories"
+                ],
+                "summary": "Obtenir la liste de toutes les catégories supprimer",
+                "operationId": "e2316b27f704f9c42222512107a633a4",
+                "responses": {
+                    "200": {
+                        "description": "Opération réussie",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "categories": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Categorie"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Non autorisé"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/commentaires": {
             "get": {
                 "tags": [
@@ -1587,6 +1672,38 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        },
+        "/api/listeUtilisateur": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Obtenir une liste de tous les utilisateurs",
+                "operationId": "e1802892afd3503f54f581837b9060ed",
+                "responses": {
+                    "200": {
+                        "description": "Opération réussie",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "user": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/User"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Non autorisé"
+                    }
+                }
             }
         },
         "/api/register": {
@@ -1944,12 +2061,7 @@
                     "401": {
                         "description": "Non autorisé"
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             }
         },
         "/api/messageShow{id}": {
